# pocketjs

./: .gitattributes  .gitignore  AUDIO.md  CLAUDE.md  DESIGN.md  DETERMINISM.md  DEVTOOLS.md  LAUNCHER.md  LICENSE  PLATFORM.md  README.md  RUNTIMES.md  WIDGET.md  imagegen  package.json  pocket.config.ts  pocket.json  pocketjs-inkview-implementation.md  psplink  tsconfig.json
engine/: Cargo.toml
engine/backends/esp32p4-ppa/: Cargo.toml  README.md
engine/backends/esp32p4-ppa/src/: esp_idf.rs  lib.rs
engine/core/: Cargo.toml
engine/core/src/: anim.rs  codec.rs  damage.rs  draw.rs  layout.rs  lib.rs  package.rs  raster.rs  spec.rs  stream.rs  stream_rx.rs  tests.rs  wire.rs
engine/crates/pocket-mod/: Cargo.toml
engine/crates/pocket-mod/src/: lib.rs
engine/crates/pocket-ui-surface/: Cargo.toml
engine/crates/pocket-ui-surface/src/: lib.rs  pak.rs
engine/crates/pocket-ui-wgpu/: Cargo.toml
engine/crates/pocket-ui-wgpu/src/: blit.rs  dbg.rs  lib.rs  render.rs  surface.rs
engine/crates/pocket-vrm/fixtures/: .gitignore  README.md
engine/crates/pocket-vrm/src/: parse.rs
engine/crates/pocket-widget/: Cargo.toml
engine/crates/pocket-widget/src/: lib.rs  parts.rs  shell.rs
engine/pocket3d/: PSP.md  README.md
engine/pocket3d/crates/gu-demo/: Cargo.toml  build.rs
engine/pocket3d/crates/pocket3d-bsp/: Cargo.toml
engine/pocket3d/crates/pocket3d-cook/: Cargo.toml
engine/pocket3d/crates/pocket3d-gu/: Cargo.toml
engine/symbian/: Cargo.toml  rust-toolchain.toml
engine/symbian/src/: lib.rs
engine/symbian/targets/: armv6-symbian-eabi.json
engine/wasm/: Cargo.toml
engine/wasm/src/: lib.rs
hosts/pocketbook/: Cargo.toml  README.md  build.rs  deploy.sh  deploy.ts
hosts/pocketbook/docs/: IMPLEMENTATION.md  INTEGRATION.md
hosts/pocketbook/src/: compat.c  framebuffer.rs  input.rs  main.rs  refresh.rs
hosts/psp/: Cargo.toml  build.rs
hosts/psp/src/: alloc.rs  arena.rs  audio.rs  c_heap.rs  dbg.rs  ffi.rs  ge.rs  host.rs  lib.rs  main.rs  pak.rs  qjs_alloc.rs  svc.rs  switch.rs  veil.rs
hosts/psp/targets/: mipsel-sony-psp.json
hosts/switch/: Cargo.toml  Makefile  README.md
hosts/switch/source/: main.c
hosts/switch/src/: dbg.rs  graphics.rs  lib.rs  switch.rs
hosts/vita/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
hosts/vita/src/: audio.rs  ffi.rs  graphics.rs  lib.rs  main.rs  net.rs  pak.rs  stats.rs  svc.rs  switch.rs  vid.rs
hosts/vita/src/input/: touch.rs
native/: Cargo.toml  build.rs
native-3ds/ffi/: Cargo.toml
native-3ds/ffi/src/: lib.rs
native-vita/: Cargo.toml  README.md  build.rs
native-vita/.cargo/: config.toml
native-vita/src/: dbg.rs  ffi.rs  graphics.rs  input.rs  lib.rs  main.rs  pak.rs
native-vita/src/input/: pad.rs  touch.rs
native/src/: arena.rs  audio.rs  dbg.rs  ffi.rs  ge.rs  ge3d.rs  lib.rs  main.rs  pak.rs  playset.rs  scene3d.rs  stats.rs  svc.rs  switch.rs  veil.rs  vid.rs  video.rs
pocket3d/: .gitignore  Cargo.toml  DESIGN.md  PSP.md  README.md
pocket3d/crates/gu-demo/: Cargo.toml
pocket3d/crates/pocket-drive/: Cargo.toml  README.md  build.rs
pocket3d/crates/pocket-drive/cooker/: cook.ts
pocket3d/crates/pocket-drive/src/: car.rs  main.rs  pack.rs  scene.rs  stream.rs
pocket3d/crates/pocket-mod/: Cargo.toml
pocket3d/crates/pocket-mod/src/: lib.rs
pocket3d/crates/pocket-playset/: Cargo.toml
pocket3d/crates/pocket-playset/src/: behavior.rs  collision.rs  lib.rs  math.rs  mount.rs  resolver.rs  snake.rs  terrain.rs  vehicle.rs  world.rs
pocket3d/crates/pocket-playset/tests/: hud_speed.rs  parity.rs  wheel_offsets.rs
pocket3d/crates/pocket-scene3d/: Cargo.toml
pocket3d/crates/pocket-scene3d/src/: batch.rs  lib.rs  mount.rs  renderer.rs  store.rs
pocket3d/crates/pocket-scene3d/tests/: static_batches.rs
pocket3d/crates/pocket-ui-wgpu/src/: blit.rs  dbg.rs  lib.rs  pak.rs  render.rs  surface.rs
pocket3d/crates/pocket-vrm/: Cargo.toml
pocket3d/crates/pocket-vrm/examples/: dump.rs
pocket3d/crates/pocket-vrm/src/: glb.rs  lib.rs  lookat.rs  spring.rs  vrma.rs
pocket3d/crates/pocket-vrm/tests/: fixtures.rs
pocket3d/crates/pocket-widget/: Cargo.toml
pocket3d/crates/pocket-widget/src/: embed.rs  lib.rs  parts.rs  pick.rs  shell.rs
pocket3d/crates/pocket3d/: Cargo.toml
pocket3d/crates/pocket3d-anim/: Cargo.toml
pocket3d/crates/pocket3d-anim/src/: lib.rs
pocket3d/crates/pocket3d-app/: Cargo.toml
pocket3d/crates/pocket3d-app/src/: lib.rs
pocket3d/crates/pocket3d-assets/: Cargo.toml
pocket3d/crates/pocket3d-assets/src/: lib.rs
pocket3d/crates/pocket3d-audio/: Cargo.toml
pocket3d/crates/pocket3d-audio/src/: lib.rs
pocket3d/crates/pocket3d-bsp/: Cargo.toml
pocket3d/crates/pocket3d-bsp/src/: cook.rs  cooked.rs  entities.rs  lib.rs  lightmap.rs  mesh.rs  raw.rs  trace.rs  types.rs  vis.rs  wad.rs
pocket3d/crates/pocket3d-bsp/tests/: real_maps.rs
pocket3d/crates/pocket3d-core/: Cargo.toml
pocket3d/crates/pocket3d-core/src/: lib.rs
pocket3d/crates/pocket3d-gu/: Cargo.toml
pocket3d/crates/pocket3d-gu/src/: lib.rs  mesh.rs  texture.rs  world.rs
pocket3d/crates/pocket3d-kcc/: Cargo.toml
pocket3d/crates/pocket3d-kcc/src/: lib.rs
pocket3d/crates/pocket3d-physics/: Cargo.toml
pocket3d/crates/pocket3d-physics/src/: lib.rs
pocket3d/crates/pocket3d-render/: Cargo.toml
pocket3d/crates/pocket3d-render-wgpu/: Cargo.toml
pocket3d/crates/pocket3d-render-wgpu/src/: lib.rs
pocket3d/crates/pocket3d-render/src/: lib.rs
pocket3d/crates/pocket3d-script/: Cargo.toml
pocket3d/crates/pocket3d-script/src/: lib.rs
pocket3d/crates/pocket3d-vita/: Cargo.toml
pocket3d/crates/pocket3d-vita/examples/: fullscreen_sky.rs
pocket3d/crates/pocket3d-vita/shaders/: README.md
pocket3d/crates/pocket3d-vita/src/: camera.rs  lib.rs  mesh.rs  pool.rs  world.rs  (+1 more)
pocket3d/examples/chorus/: Cargo.toml
pocket3d/examples/handheld/: Cargo.toml
pocket3d/examples/note-widget/: Cargo.toml
pocket3d/examples/openstrike/: Cargo.toml  README.md
pocket3d/examples/uihost/: Cargo.toml
pocket3d/tools/p3d/: Cargo.toml
wasm/: Cargo.toml
wasm/src/: lib.rs  raster.rs
(+1200 files in other folders)
