# pocketjs-psp — the PSP EBOOT: QuickJS + pocketjs-core + sceGu backend.
#
# STANDALONE LONE-BIN CRATE: cargo-psp requires this crate to be outside any
# workspace (do NOT add a workspace Cargo.toml at PocketJS/).
#
# Build via scripts/psp.ts: `rustup run nightly-2026-05-28 cargo psp` with the
# environment resolved from cli/psp-toolchain.json (llvm-ar, RUSTFLAGS
# -A linker-messages, RUST_PSP_TARGET=targets/mipsel-sony-psp.json,
# RUST_PSP_ABORT_ONLY=1, TARGET_CFLAGS). `bun run bootstrap` installs the
# pinned cargo tools and verified SDK in the shared pocket-stack cache.
#
# Memory (DESIGN.md "Memory (the blocker fix)" [R]): the psp crate is built
# with `external-global-alloc` (gates out rust-psp's one-kernel-object-per-
# allocation SystemAlloc #[global_allocator] AND its #[alloc_error_handler]);
# src/alloc.rs provides both, backed by the single-kernel-block arena that
# also serves QuickJS (qjs_alloc.rs) and newlib malloc (c_heap.rs).

[package]
name = "pocketjs-psp"
version = "0.1.0"
edition = "2021"

[dependencies]
psp = { git = "https://github.com/pocket-stack/rust-psp.git", rev = "2cbaf8c9bc72569c76240a1d9743de10731e5f6b", features = ["external-c-heap", "abort-only", "external-global-alloc"] }
# ba5bdd0 carries the JS_SetGCThreshold/JS_RunGC bindings and sets the C
# build to -O2. NOTE: that opt_level does NOT reach this target — scripts/psp.ts
# sets CRATE_CC_NO_DEFAULTS, which makes cc-rs skip the block that emits -O.
# The flag that actually optimizes QuickJS here lives in TARGET_CFLAGS; with it
# the guest turn measured 7.1ms -> 4.0ms per frame on real hardware (rally).
libquickjs-sys = { git = "https://github.com/pocket-stack/quickjs-rs.git", rev = "ba5bdd0dc013518768e76cd9e05cd30ed53dd35b" }
pocketjs-core = { path = "../core" }
# The scene3d retained store, SHARED with the desktop core (core-only build:
# no_std + alloc, no wgpu/rquickjs). Renderer is ge3d.rs; mount is scene3d.rs.
pocket-scene3d = { path = "../pocket3d/crates/pocket-scene3d", default-features = false }
# The playset sim cores, SHARED with the desktop host (core-only build). Why
# native: QuickJS on this CPU costs ~1.7µs/op, so a TS sim step is ~20x over
# the 60fps frame budget. Mount is playset.rs.
pocket-playset = { path = "../pocket3d/crates/pocket-playset", default-features = false }
glam = { version = "0.33", default-features = false, features = ["libm"] }
libm = "0.2"

[features]
# E2E frame-dump build for test/e2e-ppsspp.ts (dumps frames to ms0:/dc_cap).
capture = []
# PSP-side microsecond timing summary for scripts/bench-ppsspp.ts.
bench = []
