[workspace]
resolver = "2"
members = [
    "crates/pocket3d",
    "crates/pocket3d-bsp",
    "crates/pocket3d-cook",
    "crates/pocket-mod",
    "crates/pocket-ui-wgpu",
    "crates/pocket-vrm",
    "crates/pocket-widget",
    "examples/handheld",
    "examples/note-widget",
    "examples/uihost",
]
# PSP-only crates (tier-3 target, cargo-psp toolchain) — kept out of the
# desktop workspace on purpose, like the repo-root native/ crate.
exclude = ["crates/pocket3d-gu", "crates/gu-demo"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/pocket-stack/pocketjs"

[workspace.dependencies]
pocket3d = { path = "crates/pocket3d" }
pocket3d-bsp = { path = "crates/pocket3d-bsp" }
pocket-mod = { path = "crates/pocket-mod" }
pocket-ui-wgpu = { path = "crates/pocket-ui-wgpu" }
pocket-vrm = { path = "crates/pocket-vrm" }
pocket-widget = { path = "crates/pocket-widget" }
pocketjs-core = { path = "../core", features = ["std"] }
rquickjs = "0.12"

wgpu = "25"
winit = "0.30"
# default-features off so pocket3d-bsp can build no_std (libm) for the PSP;
# desktop crates re-enable "std" per member.
glam = { version = "0.33", default-features = false }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
gltf = "1.4"
png = "0.18"
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
font8x8 = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
