# pocketjs-wasm — pocketjs-core + deterministic software rasterizer compiled to
# wasm32-unknown-unknown (no wasm-bindgen). Used by BOTH the browser dev host
# (host-web/) and headless Bun goldens (test/golden.ts). See ../DESIGN.md.
#
# Build: cargo build --target wasm32-unknown-unknown --release
# (scripts/wasm.ts wraps this.)
#
# NOTE: deliberately NOT part of any cargo workspace — see ../core/Cargo.toml.

[package]
name = "pocketjs-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pocketjs-core = { path = "../core" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
