# pocketjs-core — the platform-agnostic retained UI core (tree, style, taffy
# layout, text, animation, draw-list emission). #![no_std] + alloc by default
# so the same crate builds for mipsel-sony-psp, wasm32-unknown-unknown and the
# host. See ../../../docs/DESIGN.md.
#
# NOTE: deliberately NOT part of any cargo workspace — cargo-psp needs
# hosts/psp to be a lone-bin standalone crate, so each crate stands alone.

[package]
name = "pocketjs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# no_std + alloc flexbox layout. Feature set verified to resolve; f32-only,
# no libm (see docs/DESIGN.md "Why these choices").
taffy = { version = "0.11", default-features = false, features = [
    "alloc",
    "taffy_tree",
    "flexbox",
    "content_size",
] }

[dev-dependencies]
# Self-dependency with `std` so `cargo test` builds the test harness against
# the std-enabled crate while normal builds stay no_std (default features off).
pocketjs-core = { path = ".", features = ["std"] }

[features]
default = []
# Host-test convenience: links std (and taffy's std) instead of no_std+alloc.
std = ["taffy/std"]
