# pocketbook-host — the PocketJS UI runtime on PocketBook e-readers (inkview).
#
# STANDALONE LONE-BIN CRATE (same model as hosts/psp and hosts/vita): it lives
# outside any workspace with its own Cargo.lock, and path-depends on the engine
# crates. It reuses the backend-agnostic `ui` surface (pocket-ui-surface) and
# the core's software rasterizer, then blits the frame as RGB24 (inkview
# converts to gray on grayscale panels, writes RGB on color panels).
# See docs/IMPLEMENTATION.md in this directory.
#
# Cross-compile for PocketBook's ARM Linux (glibc 2.23):
#   rustup target add armv7-unknown-linux-gnueabi
#   cargo install cargo-zigbuild
#   cargo zigbuild --release --target armv7-unknown-linux-gnueabi.2.23
# libinkview.so is dlopen'd at runtime (inkview::load) — no SDK at build time.

[package]
name = "pocketbook-host"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "PocketJS UI runtime host for PocketBook e-readers via the inkview SDK"

[dependencies]
pocketjs-core = { path = "../../engine/core", features = ["std"] }
pocket-mod = { path = "../../engine/crates/pocket-mod" }
pocket-ui-surface = { path = "../../engine/crates/pocket-ui-surface" }

# inkview is consumed as-is (no modifications), pinned to a git REV like the
# PSP toolchain pins (local sibling-checkout edits are invisible until merged
# upstream and repinned). Default feature is sdk-6-10; override for older
# firmware, e.g. --no-default-features --features sdk-6-5. For local inkview
# hacking use a [patch] section, not a path rewrite here.
inkview = { git = "https://github.com/simmsb/inkview-rs", rev = "0e4ecab93f6e2907c255bb50bc4b6c1882779274", package = "inkview" }

anyhow = "1"
log = "0.4"
env_logger = "0.11"

# rquickjs ships pre-generated FFI bindings for common targets but NOT the
# soft-float `armv7-unknown-linux-gnueabi` that PocketBook needs, so generate
# them at build time (bindgen; requires libclang) for ARM cross-builds only.
# Native builds keep the pre-generated bindings (no libclang required).
[target.'cfg(target_arch = "arm")'.dependencies]
rquickjs = { version = "0.12", features = ["bindgen"] }

[build-dependencies]
cc = "1"

[profile.release]
opt-level = "s" # size-optimized (e-readers have limited storage)
lto = true
strip = true
panic = "abort"
