# pocketjs-psp — the PSP EBOOT: QuickJS + pocketjs-core + sceGu backend.
#
# STANDALONE LONE-BIN CRATE: cargo-psp requires this crate to be outside any
# workspace (do NOT add a workspace Cargo.toml at PocketJS/).
#
# Build via tools/psp.ts: `rustup run nightly-2026-05-28 cargo psp` with the
# environment resolved from tools/cli/psp-toolchain.json (llvm-ar, RUSTFLAGS
# -A linker-messages, RUST_PSP_TARGET=targets/mipsel-sony-psp.json,
# RUST_PSP_ABORT_ONLY=1, TARGET_CFLAGS). `bun run bootstrap` installs the
# pinned cargo tools and verified SDK in the shared pocket-stack cache.
#
# Memory (docs/DESIGN.md "Memory (the blocker fix)" [R]): the psp crate is built
# with `external-global-alloc` (gates out rust-psp's one-kernel-object-per-
# allocation SystemAlloc #[global_allocator] AND its #[alloc_error_handler]);
# framework/src/alloc.rs provides both, backed by the single-kernel-block arena that
# also serves QuickJS (qjs_alloc.rs) and newlib malloc (c_heap.rs).

[package]
name = "pocketjs-psp"
version = "0.1.0"
edition = "2021"

[dependencies]
psp = { git = "https://github.com/pocket-stack/rust-psp.git", rev = "2cbaf8c9bc72569c76240a1d9743de10731e5f6b", features = ["external-c-heap", "abort-only", "external-global-alloc"] }
libquickjs-sys = { git = "https://github.com/pocket-stack/quickjs-rs.git", rev = "0fc946fb670c0c29bc0135f510bcb0f595415a61" }
pocketjs-core = { path = "../../engine/core" }

[features]
# E2E frame-dump build for tests/e2e/ppsspp.ts (dumps frames to ms0:/dc_cap).
capture = []
# PSP-side microsecond timing summary for tools/bench-ppsspp.ts.
bench = []
