[package]
name = "pocketjs-switch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
libquickjs-sys = { git = "https://github.com/pocket-stack/quickjs-rs.git", rev = "0fc946fb670c0c29bc0135f510bcb0f595415a61" }
pocketjs-core = { path = "../../engine/core" }

[profile.release]
lto = true
panic = "abort"
