[package]
name = "pocketjs-vita"
version = "0.1.0"
edition = "2021"

[dependencies]
# Vita dependencies. vita2d ships precompiled GXM shaders, so VPKs remain
# self-contained and do not require a separately extracted libshacccg.suprx.
vitasdk-sys = { version = "0.3.3", features = ["SceAudio_stub", "SceCtrl_stub", "SceGxm_stub", "SceKernelThreadMgr_stub", "SceLibKernel_stub", "SceNet_stub", "SceNetCtl_stub", "SceSysmodule_stub", "SceTouch_stub"] }
vita2d-sys = "0.1.1"

libquickjs-sys = { git = "https://github.com/pocket-stack/quickjs-rs.git", rev = "0fc946fb670c0c29bc0135f510bcb0f595415a61" }
pocketjs-core = { path = "../../engine/core", features = ["std"] }

[features]
capture = []
bench = []

[package.metadata.vita]
# The Vita backend supplies VITA_DEFAULT_TITLE_ID from pocket.json. Keeping the
# reusable runtime free of a static id prevents separate apps from replacing
# one another on real hardware and in Vita3K.
title_name = "PocketJS"
# tools/vita-package.ts owns the final VPK asset merge. Keeping cargo-vita's
# intermediate package asset-free prevents a second, divergent packaging path.

# vita-elf-create consumes sceUserMainThreadStackSize from the ELF symbol
# table. The release default strips that symbol before conversion and falls
# back to Vita's 4 KiB stack, which is too small for QuickJS.
[package.metadata.vita.profile.release]
strip_symbols = false
