[package]
name = "pocketjs-esp32p4-ppa"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
pocketjs-core = { path = "../../core" }

[dev-dependencies]
pocketjs-core = { path = "../../core", features = ["std"] }

[features]
default = []
std = ["pocketjs-core/std"]

[workspace]
