[package]
name = "pocket-ui-surface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The backend-agnostic PocketJS `ui` surface: pak feeding + HostOps for the guest, independent of any renderer"

[dependencies]
pocket-mod = { workspace = true }
pocketjs-core = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
