[package]
name = "pocket-ui-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The PocketJS `ui` surface on the native desktop base: pak feeding, HostOps for the guest, DrawList rendered through wgpu"

[dependencies]
pocket3d = { workspace = true }
pocket-mod = { workspace = true }
pocketjs-core = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
