# gu-demo — pocket3d-gu bring-up EBOOT: fly a camera through a cooked map.
#
# STANDALONE CRATE (excluded from the pocket3d workspace; cargo-psp only).
# Build + run under PPSSPP with `bun scripts/gu-demo.ts` from the repo root.
# No QuickJS, no UI core — rust-psp's default allocator is plenty here, so
# this stays a pure demo of the 3D substrate.

[package]
name = "gu-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
psp = { git = "https://github.com/pocket-stack/rust-psp.git", rev = "2cbaf8c9bc72569c76240a1d9743de10731e5f6b", features = ["abort-only"] }
pocket3d-gu = { path = "../pocket3d-gu" }
pocket3d-bsp = { path = "../pocket3d-bsp", default-features = false, features = ["libm"] }
glam = { version = "0.33", default-features = false, features = ["libm"] }
