[package]
name = "pocket-mod"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Guest hosting for the Pocket runtime family: one QuickJS realm, mounted surfaces, one guest turn per tick (RUNTIMES.md)"

[dependencies]
pocketjs-core = { workspace = true }
rquickjs = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
