[package]
name = "pocket-vrm"
description = "VRM 0.x character semantics for pocket3d: extension parsing, spring-bone physics, VRMA retargeting, eye look-at"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pocket3d = { workspace = true }
glam = { workspace = true, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
