[package]
name = "pocket-widget"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Desktop widgets as a runtime-family capability: widget window shell with demand rendering, embedded `ui` surfaces on meshes, part picking, PSP input packing"

[dependencies]
pocket3d = { workspace = true }
pocket-ui-wgpu = { workspace = true }
pocketjs-core = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true, features = ["std"] }
anyhow = { workspace = true }
log = { workspace = true }

# Widget windows set NSWindow.collectionBehavior (all Spaces, over
# fullscreen apps) — winit doesn't expose it. Same objc2 winit pins.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
